# videoCoding

./: README.md
cvMatToBinaryFile/: .cproject  .project  README.md
cvMatToBinaryFile/src/: BoostTutorial.cpp  cvmat_serilization.h
ffmpeg-tutorial/: tutorial01.c
thermoCamBasics/: README.md
thermoCamBasics/optris_drivers-master/example/: CMakeLists.txt  Obvious2D.cpp  StartGuide  main.cpp
videoOnDemand/src/videoOnDemand/srv/: __init__.py  _getVideo.py
videoOnDemand_on_sensor_msgs/src/: frameManager.cpp
